NAK-984 added support to image uplaod
